update layout & view

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -37,7 +37,7 @@
         android:layout_height="50dp" />
 
     <!-- Đảm bảo InputPassword có layout_height="wrap_content" -->
-    <com.example.quanlychitieu.presentation.login.widget.InputPassword
+    <com.example.quanlychitieu.views.auth.InputPasswordView
         android:id="@+id/inputPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -48,7 +48,7 @@
         android:layout_height="30dp" />
 
     <!-- Đảm bảo CustomButton có layout_height="wrap_content" -->
-    <com.example.quanlychitieu.presentation.widget.login.CustomButton
+    <com.example.quanlychitieu.views.auth.CustomButtonView
         android:id="@+id/btnSubmit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
