--- a/app/src/main/res/drawable/ic_facebook.xml
+++ b/app/src/main/res/drawable/ic_facebook.xml
@@ -1,21 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="11dp"
-    android:height="20dp"
-    android:viewportWidth="11.0"
-    android:viewportHeight="20.0">
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="48"
+        android:viewportHeight="48">
     <path
-        android:pathData="M6.54,20L6.54,10.877L9.488,10.877L9.929,7.322L6.54,7.322L6.54,5.052C6.54,4.022 6.815,3.321 8.236,3.321L10.049,3.32L10.049,0.14C9.735,0.097 8.659,0 7.407,0C4.794,0 3.005,1.657 3.005,4.7L3.005,7.322L0.049,7.322L0.049,10.877L3.005,10.877L3.005,20L6.54,20Z"
-        android:strokeWidth="1"
-        android:fillColor="#FFFFFF"
-        android:strokeColor="#00000000"/>
+            android:fillColor="#FFFFFF"
+            android:pathData="M44,24c0,-11.045 -8.955,-20 -20,-20S4,12.955 4,24c0,9.984 7.314,18.257 16.879,19.757V28.971h-5.078V24h5.078v-4.406c0,-5.013 2.984,-7.781 7.557,-7.781c2.189,0 4.48,0.391 4.48,0.391v4.922h-2.525c-2.486,0 -3.262,1.542 -3.262,3.124V24h5.555l-0.889,4.971h-4.666v14.786C36.686,42.257 44,33.984 44,24z"/>
+    <path
+            android:fillColor="#4267B2"
+            android:pathData="M31.819,28.971l0.889,-4.971h-5.555v-3.75c0,-1.582 0.776,-3.124 3.262,-3.124h2.525v-4.922s-2.291,-0.391 -4.48,-0.391c-4.573,0 -7.557,2.768 -7.557,7.781V24h-5.078v4.971h5.078v14.786c1.019,0.16 2.061,0.243 3.121,0.243c1.06,0 2.102,-0.083 3.121,-0.243V28.971H31.819z"/>
 </vector>
-
-<!--<vector xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--android:width="24dp"-->
-<!--android:height="24dp"-->
-<!--android:viewportHeight="408.788"-->
-<!--android:viewportWidth="408.788">-->
-<!--<path-->
-<!--    android:fillColor="@color/fb"-->
-<!--    android:pathData="M353.7,0H55.1C24.7,0 0,24.7 0,55.1v298.6c0,30.4 24.7,55.1 55.1,55.1h147.3l0.3,-146.1h-38c-4.9,0 -8.9,-4 -9,-8.9l-0.2,-47.1c-0,-5 4,-9 9,-9h37.9v-45.5c0,-52.8 32.2,-81.6 79.3,-81.6h38.7c4.9,0 9,4 9,9v39.7c0,4.9 -4,9 -8.9,9l-23.7,0c-25.6,0 -30.6,12.2 -30.6,30v39.4h56.3c5.4,0 9.5,4.7 8.9,10l-5.6,47.1c-0.5,4.5 -4.4,7.9 -8.9,7.9h-50.5l-0.3,146.1h87.6c30.4,0 55.1,-24.7 55.1,-55.1V55.1C408.8,24.7 384.1,0 353.7,0z" />-->
-<!--</vector>-->
