--- a/app/src/main/res/layout/view_analytics_chart_tabs.xml
+++ b/app/src/main/res/layout/view_analytics_chart_tabs.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-       xmlns:app="http://schemas.android.com/apk/res-auto">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
@@ -17,4 +20,4 @@
             app:tabSelectedTextColor="@color/tab_text_selected"
             app:tabRippleColor="@null" />
 
-</merge>
+</LinearLayout>
