--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -17,5 +17,21 @@
         <attr name="maxFriends" format="integer"/>
     </declare-styleable>
 
+    <declare-styleable name="CustomButton">
+        <attr name="buttonBackgroundColor" format="color" />
+        <attr name="buttonTextColor" format="color" />
+        <!-- Thêm các thuộc tính khác tùy theo nhu cầu -->
+    </declare-styleable>
+
+    <declare-styleable name="ItemFilter">
+        <attr name="title" format="string" />
+        <attr name="list" format="reference" />
+    </declare-styleable>
+
+    <declare-styleable name="ItemBottomTabView">
+        <attr name="icon" format="reference" />
+        <attr name="text" format="string" />
+    </declare-styleable>
+
     <!-- Add more custom view attributes as needed -->
 </resources>
