--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -131,4 +131,26 @@
 
     <!-- Material Design Colors - Typography -->
     <color name="black_87">#DE000000</color> <!-- Black with 87% opacity -->
+
+    <color name="spending">#F44336</color>
+    <color name="income">#4CAF50</color>
+    <color name="box_background">#FFFFFF</color>
+    <color name="box_border">#EEEEEE</color>
+
+    <!-- Purple Colors -->
+    <color name="purple">#673AB7</color>           <!-- Material Purple 500 -->
+    <color name="purple_dark">#512DA8</color>      <!-- Material Purple 700 -->
+    <color name="purple_light">#D1C4E9</color>     <!-- Material Purple 100 -->
+    <color name="purple_accent">#7C4DFF</color>    <!-- Material Purple A200 -->
+
+    <!-- Material Design Colors -->
+    <color name="teal_500">#009688</color>
+    <color name="gray_500">#9E9E9E</color>
+
+    <!-- Material Design Colors -->
+    <color name="gray_600">#757575</color>
+
+    <!-- Material Design Colors -->
+    <color name="orange_500">#FF9800</color>  <!-- Material Design Orange 500 -->
+    <color name="yellow_500">#F2BB06</color>  <!-- Material Design Yellow 500 -->
 </resources>
