--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,4 +60,10 @@
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:letterSpacing">0.01</item>
     </style>
+
+    <!-- Style cho ShapeableImageView tròn -->
+    <style name="CircleImageView">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
